--- a/vignettes/articles/Examples.Rmd
+++ b/vignettes/articles/Examples.Rmd
@@ -15,505 +15,507 @@ theme_set(theme_bw())
 
 This is a collection of minimal examples for fitting and predicting with various models and engines. 
 
-<details> 
+  <details> 
 
-<summary>`nearest_neighbor()` with the `"kknn"` engine</summary>
+  <summary>`nearest_neighbor()` with the `"kknn"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-knn_reg_spec <-
-  nearest_neighbor(neighbors = 5, weight_func = "triangular") %>%
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>%
-  set_engine("kknn")
-knn_reg_spec
-```
+  ```{r}
+  knn_reg_spec <-
+    nearest_neighbor(neighbors = 5, weight_func = "triangular") %>%
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>%
+    set_engine("kknn")
+  knn_reg_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-knn_reg_fit <- knn_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-knn_reg_fit
-```
+  ```{r}
+  knn_reg_fit <- knn_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  knn_reg_fit
+  ```
 
-The holdout data can be predicted:
+  The holdout data can be predicted:
 
-```{r}
-predict(knn_reg_fit, Chicago_test)
-```
+  ```{r}
+  predict(knn_reg_fit, Chicago_test)
+  ```
 
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-Since there are two classes, we'll use an odd number of neighbors to avoid ties:
+  Since there are two classes, we'll use an odd number of neighbors to avoid ties:
 
-```{r}
-knn_cls_spec <-
-  nearest_neighbor(neighbors = 11, weight_func = "triangular") %>%
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>%
-  set_engine("kknn")
-knn_cls_spec
-```
+  ```{r}
+  knn_cls_spec <-
+    nearest_neighbor(neighbors = 11, weight_func = "triangular") %>%
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>%
+    set_engine("kknn")
+  knn_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-knn_cls_fit <- knn_cls_spec %>% fit(Class ~ ., data = data_train)
-knn_cls_fit
-```
+  ```{r}
+  knn_cls_fit <- knn_cls_spec %>% fit(Class ~ ., data = data_train)
+  knn_cls_fit
+  ```
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
-```{r}
-bind_cols(
-  predict(knn_cls_fit, data_test),
-  predict(knn_cls_fit, data_test, type = "prob")
-)
-```
+  ```{r}
+  bind_cols(
+    predict(knn_cls_fit, data_test),
+    predict(knn_cls_fit, data_test, type = "prob")
+  )
+  ```
   
-</details>
+  </details>
 
 
-<details> 
+  <details> 
 
-<summary>`multinom_reg()` with the `"glmnet"` engine</summary>
+  <summary>`multinom_reg()` with the `"glmnet"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-multi-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-multi-class.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-mr_cls_spec <- 
-  multinom_reg(penalty = 0.1) %>% 
-  set_engine("glmnet")
-mr_cls_spec
-```
+  ```{r}
+  mr_cls_spec <- 
+    multinom_reg(penalty = 0.1) %>% 
+    set_engine("glmnet")
+  mr_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-mr_cls_fit <- mr_cls_spec %>% fit(island ~ ., data = penguins_train)
-mr_cls_fit
-```
+  ```{r}
+  set.seed(1)
+  mr_cls_fit <- mr_cls_spec %>% fit(island ~ ., data = penguins_train)
+  mr_cls_fit
+  ```
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
-```{r}
-bind_cols(
-  predict(mr_cls_fit, penguins_test),
-  predict(mr_cls_fit, penguins_test, type = "prob")
-)
-```
+  ```{r}
+  bind_cols(
+    predict(mr_cls_fit, penguins_test),
+    predict(mr_cls_fit, penguins_test, type = "prob")
+  )
+  ```
 
-</details>
+  </details>
 
 
-<details> <summary>`rand_forest()` with the `"ranger"` engine</summary>
+  <details> <summary>`rand_forest()` with the `"ranger"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-rf_reg_spec <- 
-  rand_forest(trees = 200, min_n = 5) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>% 
-  set_engine("ranger")
-rf_reg_spec
-```
+  ```{r}
+  rf_reg_spec <- 
+    rand_forest(trees = 200, min_n = 5) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>% 
+    set_engine("ranger")
+  rf_reg_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-rf_reg_fit <- rf_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-rf_reg_fit
-```
+  ```{r}
+  set.seed(1)
+  rf_reg_fit <- rf_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  rf_reg_fit
+  ```
 
-The holdout data can be predicted:
+  The holdout data can be predicted:
 
-```{r}
-predict(rf_reg_fit, Chicago_test)
-```
+  ```{r}
+  predict(rf_reg_fit, Chicago_test)
+  ```
 
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-rf_cls_spec <- 
-  rand_forest(trees = 200, min_n = 5) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>% 
-  set_engine("ranger")
-rf_cls_spec
-```
+  ```{r}
+  rf_cls_spec <- 
+    rand_forest(trees = 200, min_n = 5) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>% 
+    set_engine("ranger")
+  rf_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-rf_cls_fit <- rf_cls_spec %>% fit(Class ~ ., data = data_train)
-rf_cls_fit
-```
+  ```{r}
+  set.seed(1)
+  rf_cls_fit <- rf_cls_spec %>% fit(Class ~ ., data = data_train)
+  rf_cls_fit
+  ```
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
-```{r}
-bind_cols(
-  predict(rf_cls_fit, data_test),
-  predict(rf_cls_fit, data_test, type = "prob")
-)
-```
-  
-</details>
+  ```{r}
+  bind_cols(
+    predict(rf_cls_fit, data_test),
+    predict(rf_cls_fit, data_test, type = "prob")
+  )
+  ```
+    
+  </details>
 
 
-<details> <summary>`rand_forest()` with the `"randomForest"` engine</summary>
+  <details> <summary>`rand_forest()` with the `"randomForest"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-rf_reg_spec <- 
-  rand_forest(trees = 200, min_n = 5) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>% 
-  set_engine("randomForest")
-rf_reg_spec
-```
+  ```{r}
+  rf_reg_spec <- 
+    rand_forest(trees = 200, min_n = 5) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>% 
+    set_engine("randomForest")
+  rf_reg_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-rf_reg_fit <- rf_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-rf_reg_fit
-```
+  ```{r}
+  set.seed(1)
+  rf_reg_fit <- rf_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  rf_reg_fit
+  ```
 
-The holdout data can be predicted:
+  The holdout data can be predicted:
 
-```{r}
-predict(rf_reg_fit, Chicago_test)
-```
+  ```{r}
+  predict(rf_reg_fit, Chicago_test)
+  ```
 
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-rf_cls_spec <- 
-  rand_forest(trees = 200, min_n = 5) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>% 
-  set_engine("randomForest")
-rf_cls_spec
-```
+  ```{r}
+  rf_cls_spec <- 
+    rand_forest(trees = 200, min_n = 5) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>% 
+    set_engine("randomForest")
+  rf_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-rf_cls_fit <- rf_cls_spec %>% fit(Class ~ ., data = data_train)
-rf_cls_fit
-```
+  ```{r}
+  set.seed(1)
+  rf_cls_fit <- rf_cls_spec %>% fit(Class ~ ., data = data_train)
+  rf_cls_fit
+  ```
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
-```{r}
-bind_cols(
-  predict(rf_cls_fit, data_test),
-  predict(rf_cls_fit, data_test, type = "prob")
-)
-```
-  
-</details>
+  ```{r}
+  bind_cols(
+    predict(rf_cls_fit, data_test),
+    predict(rf_cls_fit, data_test, type = "prob")
+  )
+  ```
+    
+  </details>
 
 
-<details> <summary>`svm_linear()` with the `"LiblineaR"` engine</summary>
+  <details> <summary>`svm_linear()` with the `"LiblineaR"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-svm_reg_spec <- 
-  svm_linear(cost = 1, margin = 0.1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>% 
-  set_engine("LiblineaR")
-svm_reg_spec
-```
+  ```{r}
+  svm_reg_spec <- 
+    svm_linear(cost = 1, margin = 0.1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>% 
+    set_engine("LiblineaR")
+  svm_reg_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-svm_reg_fit
-```
+  ```{r}
+  set.seed(1)
+  svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  svm_reg_fit
+  ```
 
-The holdout data can be predicted:
+  The holdout data can be predicted:
 
-```{r}
-predict(svm_reg_fit, Chicago_test)
-```
+  ```{r}
+  predict(svm_reg_fit, Chicago_test)
+  ```
 
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-svm_cls_spec <- 
-  svm_linear(cost = 1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>% 
-  set_engine("LiblineaR")
-svm_cls_spec
-```
+  ```{r}
+  svm_cls_spec <- 
+    svm_linear(cost = 1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>% 
+    set_engine("LiblineaR")
+  svm_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
-svm_cls_fit
-```
+  ```{r}
+  set.seed(1)
+  svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
+  svm_cls_fit
+  ```
 
-The holdout data can be predicted for hard class predictions.
+  The holdout data can be predicted for hard class predictions.
 
-```{r}
-predict(svm_cls_fit, data_test)
-```
+  ```{r}
+  predict(svm_cls_fit, data_test)
+  ```
 
-</details>
+  </details>
 
 
-<details> <summary>`svm_linear()` with the `"kernlab"` engine</summary>
+  <details> <summary>`svm_linear()` with the `"kernlab"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-svm_reg_spec <- 
-  svm_linear(cost = 1, margin = 0.1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>% 
-  set_engine("kernlab")
-svm_reg_spec
-```
+  ```{r}
+  svm_reg_spec <- 
+    svm_linear(cost = 1, margin = 0.1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>% 
+    set_engine("kernlab")
+  svm_reg_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-svm_reg_fit
-```
+  ```{r}
+  set.seed(1)
+  svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  svm_reg_fit
+  ```
 
-The holdout data can be predicted:
+  The holdout data can be predicted:
 
-```{r}
-predict(svm_reg_fit, Chicago_test)
-```
+  ```{r}
+  predict(svm_reg_fit, Chicago_test)
+  ```
 
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-svm_cls_spec <- 
-  svm_linear(cost = 1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>% 
-  set_engine("kernlab")
-svm_cls_spec
-```
+  ```{r}
+  svm_cls_spec <- 
+    svm_linear(cost = 1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>% 
+    set_engine("kernlab")
+  svm_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
-svm_cls_fit
-```
+  ```{r}
+  set.seed(1)
+  svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
+  svm_cls_fit
+  ```
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
-```{r}
-bind_cols(
-  predict(svm_cls_fit, data_test),
-  predict(svm_cls_fit, data_test, type = "prob")
-)
-```
-  
-</details>
+  ```{r}
+  bind_cols(
+    predict(svm_cls_fit, data_test),
+    predict(svm_cls_fit, data_test, type = "prob")
+  )
+  ```
+    
+  </details>
 
 
-<details> <summary>`svm_poly()` with the `"kernlab"` engine</summary>
+  <details> <summary>`svm_poly()` with the `"kernlab"` engine</summary>
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-svm_reg_spec <- 
-  svm_poly(cost = 1, margin = 0.1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>% 
-  set_engine("kernlab")
-svm_reg_spec
-```
+  ```{r}
+  svm_reg_spec <- 
+    svm_poly(cost = 1, margin = 0.1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>% 
+    set_engine("kernlab")
+  svm_reg_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-svm_reg_fit
-```
+  ```{r}
+  set.seed(1)
+  svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  svm_reg_fit
+  ```
 
-The holdout data can be predicted:
+  The holdout data can be predicted:
 
-```{r}
-predict(svm_reg_fit, Chicago_test)
-```
+  ```{r}
+  predict(svm_reg_fit, Chicago_test)
+  ```
 
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-We can define the model with specific parameters:
+  We can define the model with specific parameters:
 
-```{r}
-svm_cls_spec <- 
-  svm_poly(cost = 1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>% 
-  set_engine("kernlab")
-svm_cls_spec
-```
+  ```{r}
+  svm_cls_spec <- 
+    svm_poly(cost = 1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>% 
+    set_engine("kernlab")
+  svm_cls_spec
+  ```
 
-Now we create the model fit object:
+  Now we create the model fit object:
 
-```{r}
-set.seed(1)
-svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
-svm_cls_fit
-```
+  ```{r}
+  set.seed(1)
+  svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
+  svm_cls_fit
+  ```
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
 
-```{r}
-bind_cols(
-  predict(svm_cls_fit, data_test),
-  predict(svm_cls_fit, data_test, type = "prob")
-)
-```
-  
-</details>
+  ```{r}
+  bind_cols(
+    predict(svm_cls_fit, data_test),
+    predict(svm_cls_fit, data_test, type = "prob")
+  )
+  ```
+    
+  </details>
 
 
-<details> <summary>`svm_rbf()` with the `"kernlab"` engine</summary>
+  <details> 
 
-```{r echo=FALSE}
-knitr::spin_child("template-reg-chicago.R")
-```
+  <summary>`svm_rbf()` with the `"kernlab"` engine</summary>
 
-We can define the model with specific parameters:
+  ```{r echo=FALSE}
+  knitr::spin_child("template-reg-chicago.R")
+  ```
 
-```{r}
-svm_reg_spec <- 
-  svm_rbf(cost = 1, margin = 0.1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("regression") %>% 
-  set_engine("kernlab")
-svm_reg_spec
-```
+  We can define the model with specific parameters:
 
-Now we create the model fit object:
+  ```{r}
+  svm_reg_spec <- 
+    svm_rbf(cost = 1, margin = 0.1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("regression") %>% 
+    set_engine("kernlab")
+  svm_reg_spec
+  ```
 
-```{r}
-set.seed(1)
-svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
-svm_reg_fit
-```
+  Now we create the model fit object:
 
-The holdout data can be predicted:
+  ```{r}
+  set.seed(1)
+  svm_reg_fit <- svm_reg_spec %>% fit(ridership ~ ., data = Chicago_train)
+  svm_reg_fit
+  ```
 
-```{r}
-predict(svm_reg_fit, Chicago_test)
-```
+  The holdout data can be predicted:
 
+  ```{r}
+  predict(svm_reg_fit, Chicago_test)
+  ```
 
-```{r echo=FALSE}
-knitr::spin_child("template-cls-two-class.R")
-```
 
-We can define the model with specific parameters:
+  ```{r echo=FALSE}
+  knitr::spin_child("template-cls-two-class.R")
+  ```
 
-```{r}
-svm_cls_spec <- 
-  svm_rbf(cost = 1) %>% 
-  # This model can be used for classification or regression, so set mode
-  set_mode("classification") %>% 
-  set_engine("kernlab")
-svm_cls_spec
-```
+  We can define the model with specific parameters:
 
-Now we create the model fit object:
+  ```{r}
+  svm_cls_spec <- 
+    svm_rbf(cost = 1) %>% 
+    # This model can be used for classification or regression, so set mode
+    set_mode("classification") %>% 
+    set_engine("kernlab")
+  svm_cls_spec
+  ```
 
-```{r}
-set.seed(1)
-svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
-svm_cls_fit
-```
+  Now we create the model fit object:
 
-The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+  ```{r}
+  set.seed(1)
+  svm_cls_fit <- svm_cls_spec %>% fit(Class ~ ., data = data_train)
+  svm_cls_fit
+  ```
 
-```{r}
-bind_cols(
-  predict(svm_cls_fit, data_test),
-  predict(svm_cls_fit, data_test, type = "prob")
-)
-```
-  
-</details>
+  The holdout data can be predicted for both hard class predictions and probabilities. We'll bind these together into one tibble:
+
+  ```{r}
+  bind_cols(
+    predict(svm_cls_fit, data_test),
+    predict(svm_cls_fit, data_test, type = "prob")
+  )
+  ```
+    
+  </details>
 
